# tlatoani-tales

./: .gitignore  Cargo.toml  README.md  Tlatoāni Tales.md  rust-toolchain.toml
assets/fonts/: README.md
calmecac/web/: README.md  index.html  manifest.webmanifest  service-worker.js
calmecac/web/assets/fonts/: .gitkeep
calmecac/web/examples/: calmecac-index.json
calmecac/web/scripts/: abstraction-lint.js  breadcrumbs.js  main.js  router.js
calmecac/web/scripts/views/: _util.js  comic.js  convergence.js  graph.js  lesson.js  rule.js  tombstones.js
calmecac/web/styles/: base.css  comic-view.css  convergence.css  graph.css  lesson-view.css  rule-view.css  tombstones.css
characters/: README.md
characters/covi/: README.md  lora-manifest.json
characters/tlatoani/: README.md  lora-manifest.json
crates/tt-calmecac/: Cargo.toml
crates/tt-calmecac-indexer/: Cargo.toml
crates/tt-calmecac-indexer/src/: lib.rs
crates/tt-calmecac/src/: main.rs  placeholder_index.html
crates/tt-comfy/: Cargo.toml
crates/tt-comfy/src/: lib.rs  workflow.rs
crates/tt-compose/: Cargo.toml
crates/tt-compose/src/: lib.rs
crates/tt-core/: Cargo.toml
crates/tt-core/src/: lib.rs  podman.rs
crates/tt-events/: Cargo.toml
crates/tt-events/src/: lib.rs
crates/tt-hashing/: Cargo.toml
crates/tt-hashing/src/: lib.rs
crates/tt-lint/: Cargo.toml
crates/tt-lint/src/: lib.rs
crates/tt-lora/: Cargo.toml
crates/tt-lora/src/: lib.rs
crates/tt-metadata/: Cargo.toml
crates/tt-metadata/src/: lib.rs
crates/tt-qa/: Cargo.toml
crates/tt-qa/src/: lib.rs
crates/tt-render/: Cargo.toml
crates/tt-render/src/: main.rs
crates/tt-specs/: Cargo.toml
crates/tt-specs/src/: frontmatter.rs  graph.rs  lib.rs
crates/tt-telemetry/: Cargo.toml
crates/tt-telemetry/src/: lib.rs
docs/: training-lifecycle.md
docs/cheatsheets/: inference-runtime.md
images/inference/: Containerfile
images/trainer/: Containerfile
images/viewer/: Containerfile
openspec/: config.yaml
openspec/specs/calmecac/: spec.md
openspec/specs/character-canon/: spec.md
openspec/specs/character-loras/: spec.md
openspec/specs/concept-curriculum/: spec.md
openspec/specs/isolation/: spec.md
openspec/specs/lesson-driven-development/: spec.md
openspec/specs/lessons/: spec.md
openspec/specs/lessons-ledger/: spec.md
openspec/specs/lessons/S1-100-volatile-is-dangerous/: spec.md
openspec/specs/lessons/S1-1000-dashboards-must-add-observability/: spec.md
openspec/specs/lessons/S1-1000-shape-has-meaning/: spec.md
openspec/specs/lessons/S1-1100-meaning-is-operable/: spec.md
openspec/specs/lessons/S1-1100-shape-has-meaning/: spec.md
openspec/specs/lessons/S1-1200-loop-closes/: spec.md
openspec/specs/lessons/S1-1200-meaning-is-operable/: spec.md
openspec/specs/lessons/S1-1300-loop-closes/: spec.md
openspec/specs/lessons/S1-1300-monotonic-convergence/: spec.md
openspec/specs/lessons/S1-1400-monotonic-convergence/: spec.md
openspec/specs/lessons/S1-1400-proof-by-self-reference/: spec.md
openspec/specs/lessons/S1-1500-proof-by-self-reference/: spec.md
openspec/specs/lessons/S1-200-save-means-findable/: spec.md
openspec/specs/lessons/S1-300-memory-lives-in-history/: spec.md
openspec/specs/lessons/S1-400-discrete-time/: spec.md
openspec/specs/lessons/S1-500-edits-that-reconcile/: spec.md
openspec/specs/lessons/S1-600-ask-in-writing/: spec.md
openspec/specs/lessons/S1-700-loops-need-aim/: spec.md
openspec/specs/lessons/S1-800-see-the-now/: spec.md
openspec/specs/lessons/S1-900-logs-are-ingredients/: spec.md
openspec/specs/lessons/S1-950-dashboards-must-add-observability/: spec.md
openspec/specs/licensing/: spec.md
openspec/specs/meta-examples/: spec.md
openspec/specs/narrative-arc/: spec.md
openspec/specs/orchestrator/: spec.md
openspec/specs/script-conventions/: spec.md
openspec/specs/seasons/: spec.md
openspec/specs/style-bible/: spec.md
openspec/specs/symbol-dictionary/: spec.md
openspec/specs/tlatoāni-spelling/: spec.md
openspec/specs/tombstones/: spec.md
openspec/specs/trace-plate/: spec.md
openspec/specs/visual-qa-loop/: spec.md
scripts/: bootstrap-comfyui.sh  download-models.sh  start-inference.sh  tlatoāni_tales.sh
strips/01-volatile-is-dangerous/: README.md  metadata-template.json  proposal.md
strips/01-volatile-is-dangerous/panels/: panel-1.prompt.md  panel-2.prompt.md  panel-3.prompt.md
