# Tlatoāni Tales — Rust workspace manifest.
#
# @trace spec:orchestrator
#
# The workspace is a family of tiny, single-responsibility crates (tillandsias
# idiom): each `tt-*` crate is a bounded context, crates communicate via typed
# events on a broadcast bus, nothing mutates shared state silently. See
# openspec/specs/orchestrator/spec.md for the full layout rationale.

[workspace]
resolver = "2"
members = [
    "crates/tt-core",
    "crates/tt-specs",
    "crates/tt-hashing",
    "crates/tt-events",
    "crates/tt-comfy",
    "crates/tt-qa",
    "crates/tt-compose",
    "crates/tt-metadata",
    "crates/tt-telemetry",
    "crates/tt-lint",
    "crates/tt-lora",
    "crates/tt-calmecac-indexer",
    "crates/tt-render",
    "crates/tt-calmecac",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Tlatoāni <bulloncito@gmail.com>"]
repository = "https://github.com/8007342/tlatoani-tales"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
pulldown-cmark = "0.12"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
notify = "6"
sha2 = "0.10"
hex = "0.4"
unicode-normalization = "0.1"
url = "2"
walkdir = "2"
glob = "0.3"
