[package]
name = "tt-comfy"
description = "Tlatoāni Tales — async HTTP client for the untrusted ComfyUI container. Submits workflows, streams progress, returns rendered PNG paths."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tt-core = { path = "../tt-core" }
tt-events = { path = "../tt-events" }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
