[package]
name = "tt-core"
description = "Tlatoāni Tales — shared types, newtypes, error taxonomy, and the canonical podman hardening flags."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
