[package]
name = "tt-metadata"
description = "Tlatoāni Tales — METADATA.json emitter. Exactly the trace-plate schema (title, lesson, trace_spec, plate_regions, calmecac URLs, concepts, alt_text, caption)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tt-core = { path = "../tt-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
