[package]
name = "tt-qa"
description = "Tlatoāni Tales — VLM critique client (ollama over HTTP), drift scorer, reroll-addendum composer. Loads check definitions from visual-qa-loop/spec.md at runtime."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tt-core = { path = "../tt-core" }
tt-events = { path = "../tt-events" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
